--- a/stories/index.html
+++ b/stories/index.html
@@ -409,6 +409,12 @@
       <td><a name="bn0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/bn/0066_নোযিবেলে-এবং-তিনটি-চুল-_slides.html" target="_blank">নোযিবেলে এবং তিনটি চুল</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0072</td>
       <td><a href="/stories/bn/0072_হানিগাইড-পাখির-প্রতিশোধ_slides.html" target="_blank">হানিগাইড পাখির প্রতিশোধ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6149,7 +6155,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nn0066">nn</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#bn0066">bn</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nn0066">nn</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
