--- a/stories/index.html
+++ b/stories/index.html
@@ -433,6 +433,18 @@
       <td><a name="bn0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0141</td>
+      <td><a href="/stories/bn/0141_মুরগী-এবং-কেন্নো_slides.html" target="_blank">মুরগী এবং কেন্নো</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/bn/0156_ক্ষুধার্ত-কুমির_slides.html" target="_blank">ক্ষুধার্ত কুমির</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0158</td>
       <td><a href="/stories/bn/0158_মুরগী-এবং-ঈগল_slides.html" target="_blank">মুরগী এবং ঈগল</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -487,6 +499,12 @@
       <td><a name="bn0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0296</td>
+      <td><a href="/stories/bn/0296_কলা-বিক্রেতা-টম-_slides.html" target="_blank">কলা বিক্রেতা টম</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/bn/0302_আগুন-_slides.html" target="_blank">আগুন</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -503,6 +521,12 @@
       <td><a href="/stories/bn/0324_যেই-দিন-আমি-শহরের-জন্য-ঘর-ছেড়ে-গেলাম-_slides.html" target="_blank">যেই দিন আমি শহরের জন্য ঘর ছেড়ে গেলাম</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/bn/0327_পশু-গণনা_slides.html" target="_blank">পশু গণনা</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6329,7 +6353,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#ko0141">ko</a>, <a href="#nn0141">nn</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#bn0141">bn</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#ko0141">ko</a>, <a href="#nn0141">nn</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -6353,7 +6377,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
@@ -6539,7 +6563,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nn0296">nn</a>, <a href="#no0296">no</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#bn0296">bn</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nn0296">nn</a>, <a href="#no0296">no</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -6599,7 +6623,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#nn0327">nn</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#tr0327">tr</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#bn0327">bn</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#nn0327">nn</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#tr0327">tr</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0329</td>
