--- a/stories/index.html
+++ b/stories/index.html
@@ -457,6 +457,12 @@
       <td><a name="bn0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/bn/0210_টিঙ্গি-এবং-গরু-_slides.html" target="_blank">টিঙ্গি এবং গরু</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0234</td>
       <td><a href="/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া_slides.html" target="_blank">ফুটবল তারকা আন্দিসওয়া</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -527,6 +533,18 @@
       <td><a href="/stories/bn/0327_পশু-গণনা_slides.html" target="_blank">পশু গণনা</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/bn/0337_মোমের-শিশুরা-_slides.html" target="_blank">মোমের শিশুরা</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/bn/0342_শাস্তি-_slides.html" target="_blank">শাস্তি</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6443,7 +6461,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#nn0210">nn</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#bn0210">bn</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#nn0210">nn</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -6641,7 +6659,7 @@
       <td>0337</td>
       <td><a href="http://africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#it0337">it</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#tr0337">tr</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#bn0337">bn</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#it0337">it</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#tr0337">tr</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
@@ -6653,7 +6671,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#nn0342">nn</a>, <a href="#no0342">no</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#nn0342">nn</a>, <a href="#no0342">no</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
