--- a/stories/index.html
+++ b/stories/index.html
@@ -410,7 +410,7 @@
     </tr>
     <tr>
       <td>0066</td>
-      <td><a href="/stories/bn/0066_নোযিবেলে-এবং-তিনটি-চুল-_slides.html" target="_blank">নোযিবেলে এবং তিনটি চুল</a></td>
+      <td><a href="/stories/bn/0066_নোযিবেলে-এবং-তিনটি-চুল_slides.html" target="_blank">নোযিবেলে এবং তিনটি চুল</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -463,6 +463,12 @@
       <td><a name="bn0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0231</td>
+      <td><a href="/stories/bn/0231_আবহাওয়ার-বই_slides.html" target="_blank">আবহাওয়ার বই</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0234</td>
       <td><a href="/stories/bn/0234_ফুটবল-তারকা-আন্দিসওয়া_slides.html" target="_blank">ফুটবল তারকা আন্দিসওয়া</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -506,25 +512,25 @@
     </tr>
     <tr>
       <td>0296</td>
-      <td><a href="/stories/bn/0296_কলা-বিক্রেতা-টম-_slides.html" target="_blank">কলা বিক্রেতা টম</a></td>
+      <td><a href="/stories/bn/0296_কলা-বিক্রেতা-টম_slides.html" target="_blank">কলা বিক্রেতা টম</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
-      <td><a href="/stories/bn/0302_আগুন-_slides.html" target="_blank">আগুন</a></td>
+      <td><a href="/stories/bn/0302_আগুন_slides.html" target="_blank">আগুন</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0315</td>
-      <td><a href="/stories/bn/0315_স্যাকিমার-গান-_slides.html" target="_blank">স্যাকিমার গান</a></td>
+      <td><a href="/stories/bn/0315_স্যাকিমার-গান_slides.html" target="_blank">স্যাকিমার গান</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0324</td>
-      <td><a href="/stories/bn/0324_যেই-দিন-আমি-শহরের-জন্য-ঘর-ছেড়ে-গেলাম-_slides.html" target="_blank">যেই দিন আমি শহরের জন্য ঘর ছেড়ে গেলাম</a></td>
+      <td><a href="/stories/bn/0324_যেই-দিন-আমি-শহরের-জন্য-ঘর-ছেড়ে-গেলাম_slides.html" target="_blank">যেই দিন আমি শহরের জন্য ঘর ছেড়ে গেলাম</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -536,13 +542,13 @@
     </tr>
     <tr>
       <td>0337</td>
-      <td><a href="/stories/bn/0337_মোমের-শিশুরা-_slides.html" target="_blank">মোমের শিশুরা</a></td>
+      <td><a href="/stories/bn/0337_মোমের-শিশুরা_slides.html" target="_blank">মোমের শিশুরা</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0342</td>
-      <td><a href="/stories/bn/0342_শাস্তি-_slides.html" target="_blank">শাস্তি</a></td>
+      <td><a href="/stories/bn/0342_শাস্তি_slides.html" target="_blank">শাস্তি</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -6497,7 +6503,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
